<resources>
    <string name="app_name">BittnerCapstone</string>
    <string name="logo_desc">NW Lawn Maintenance</string>
    <string name="referral">Referral</string>
    <string name="main_login">Employee / Management Login</string>
    <string name="copyright">Copyright 2022. NW Lawn Maintenance</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="emp_land">You made it to the employee section!</string>
    <string name="manager_land">You made it to the manager section!</string>
    <string name="landing_msg">"Welcome, "</string>
    <string name="profile_preview">Employee information is viewed here.</string>
    <string name="update_button">Update Information</string>
    <string name="schedule_button">View Schedule</string>
    <string name="logout_button">Logout</string>
    <string name="menu_title1">Schedule Menu</string>
    <string name="current_week_button">Current Week</string>
    <string name="workday_button">Current Day</string>
    <string name="emp_main_button">Home</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="customer">Customer</string>
    <string name="status">Status</string>
    <string name="customer_info">customer info will be seen here.</string>
    <string name="start_stop">Start / Stop</string>
    <string name="notes_entry_box">Enter any job notes here.</string>
    <string name="update_button2">Update</string>
    <string name="return_button">Return</string>
    <string name="manage_emp_button">Manage Employees</string>
    <string name="add_emp_button">Add New Employee</string>
    <string name="manage_cust_button">Manage Customers</string>
    <string name="add_cust_button">Add New Customer</string>
    <string name="manage_schedule_button">Manage Schedule</string>
    <string name="emp_view_button">Employee View</string>
    <string name="instructions">Fill out all information before sending.</string>
    <string name="customer_name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="makechoice">Check all that apply.</string>
    <string name="checkbox1">Grass Cuttin</string>
    <string name="checkbox2">String Trimming</string>
    <string name="checkbox3">Edging</string>
    <string name="checkbox4">Fertilizing</string>
    <string name="checkbox5">Bed Spraying</string>
    <string name="checkbox6">Lawn Spraying</string>
    <string name="submit_button">Submit</string>
</resources>