<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_grey"
    tools:context=".ReferralForm">

    <ImageView
        android:id="@+id/logo_nwlawn"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/logo_desc"
        android:scaleType="fitXY"
        android:src="@drawable/logo_nwlawn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="375dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="20dp"
        android:text="@string/instructions"
        android:textColor="#3E2723"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_nwlawn" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/customer_name"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:autofillHints="postalAddress" />

    <EditText
        android:id="@+id/editTextTextPostalAddress2"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/city"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPostalAddress3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPostalAddress3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/state"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPostalAddress4"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPostalAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        android:autofillHints="postalAddress" />

    <EditText
        android:id="@+id/editTextTextPostalAddress4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/zipcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        android:autofillHints="postalCode" />

    <TextView
        android:id="@+id/check_select"
        android:layout_width="375dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/makechoice"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toTopOf="@+id/checkBox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="11dp"
        android:text="@string/checkbox1"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="11dp"
        android:text="@string/checkbox2"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
        app:layout_constraintStart_toEndOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="11dp"
        android:text="@string/checkbox3"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/checkbox4"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="24dp"
        android:text="@string/checkbox5"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toStartOf="@+id/checkBox6"
        app:layout_constraintStart_toEndOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="24dp"
        android:text="@string/checkbox6"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/submit_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>