<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_grey"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_nwlawn"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/logo_desc"
        android:scaleType="fitXY"
        android:src="@drawable/logo_nwlawn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/landing_msg"
        android:layout_width="375dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="20dp"
        android:text="@string/landing_msg"
        android:textColor="#3E2723"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_nwlawn" />

    <Button
        android:id="@+id/manage_emp_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/manage_emp_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/add_emp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_emp_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/add_emp_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/manage_cust_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/manage_cust_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/manage_cust_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/add_cust_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_cust_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/add_cust_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/manage_schedule_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/manage_schedule_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/manage_schedule_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/emp_view_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/emp_view_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/emp_view_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/logout_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>