<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_grey"
    tools:context=".EmployeeWorkday">

    <ImageView
        android:id="@+id/logo_nwlawn"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/logo_desc"
        android:scaleType="fitXY"
        android:src="@drawable/logo_nwlawn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_nwlawn">

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/customer"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/black"/>
    </TableRow>

    <ScrollView
        android:layout_width="375dp"
        android:layout_height="375dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/workday_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/emp_main_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/emp_main_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>