<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_grey"
    tools:context=".ScheduleMenu">

    <ImageView
        android:id="@+id/logo_nwlawn"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/logo_desc"
        android:scaleType="fitXY"
        android:src="@drawable/logo_nwlawn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_title1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="32dp"
        android:text="@string/menu_title1"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/current_week_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/current_week_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/current_week_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/workday_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/workday_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/workday_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/emp_main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/emp_main_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/emp_main_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/logout_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>