<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_grey"
    tools:context=".CustomerJob">

    <ImageView
        android:id="@+id/logo_nwlawn"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/logo_desc"
        android:scaleType="fitXY"
        android:src="@drawable/logo_nwlawn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customer_info"
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="18dp"
        android:text="@string/customer_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_nwlawn" />

    <ImageButton
        android:id="@+id/google_maps"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/start_stop_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_info"
        app:srcCompat="@drawable/google_map_icon" />

    <Button
        android:id="@+id/start_stop_button"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/start_stop"
        android:textColor="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_info" />

    <EditText
        android:id="@+id/notes_entry_box"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/notes_entry_box"
        app:layout_constraintBottom_toTopOf="@+id/update_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/update_button2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/update_button2"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toStartOf="@+id/return_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/green_1"
        android:text="@string/return_button"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>